# oz_django8

./: pyproject.toml
.github/workflows/: ci.yml
oz_django8/: settings.py  urls.py
tabom/: models.py
tabom/tests/: test_like_service.py
